---
source: rust/codec-latex/tests/examples.rs
expression: "&latex"
---
\documentclass{article}

\begin{document}

Before island.

\begin{island}

Within island. There can be inline code expression: \expr{1 + 2}.

And there can be block code chunk:

\begin{chunk}
2 + 3
\end{chunk}


\end{island}

After island.

Island with id

\begin{island}[tab:one]

Within the island with table id.

\end{island}

\begin{island}[fig:one]

Within the island with figure id.

\end{island}

Island with options

\begin{island}[label-type=tab,label=7,style=some-style]

Within the island with options.

\end{island}

\end{document}
